tests/negative/semantic/init_no_matching_overload/input.ci
structure Foo {
    int x = 0;
    void _init(int v) { self.x = v; }
}

void main() {
    Foo f = clone Foo(1, 2);
    print(toString(f.x) + "\n");
}
